# rkllm

./: .gitignore  conda.yml
rkllm-runtime/examples/rkllm_api_demo/: CMakeLists.txt  build-local.sh
rkllm-runtime/examples/rkllm_api_demo/script/: converted_data.json  cy.py  tran2json.py  trans2json.py
rkllm-runtime/examples/rkllm_api_demo/src/: cy.jsonl  readjson.cpp  test.cpp
